feat: null and boolean values deserialization, refactor: refactoring